// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component and the \`label\` prop is \`label\` as render should match the snapshot 1`] = `
<label>
  <div
    class="icheckbox indeterminate"
  >
    <input
      style="opacity:0;position:absolute"
      type="checkbox"
      value=""
    />
    <ins
      class="iCheck-helper"
      role="presentation"
      style="position:absolute;top:0%;left:0%;display:block;width:100%;height:100%;margin:0;padding:0;background:#fff;border:0;opacity:0;cursor:pointer"
    />
  </div>
  <span>
    label
  </span>
</label>
`;

exports[`Checkbox component and the children are passed and the \`labelTag\` prop is \`div\` as render should match the snapshot 1`] = `
<label>
  <div
    class="icheckbox indeterminate"
  >
    <input
      style="opacity:0;position:absolute"
      type="checkbox"
      value=""
    />
    <ins
      class="iCheck-helper"
      role="presentation"
      style="position:absolute;top:0%;left:0%;display:block;width:100%;height:100%;margin:0;padding:0;background:#fff;border:0;opacity:0;cursor:pointer"
    />
  </div>
  <div>
    <span>
      label
    </span>
  </div>
</label>
`;

exports[`Checkbox component as mount should match the default props snapshot 1`] = `
{
  "activeClassName": "active",
  "aria": false,
  "checkboxClass": null,
  "checkboxClassName": "icheckbox",
  "checked": false,
  "checkedClassName": "checked",
  "children": null,
  "className": null,
  "disabled": false,
  "disabledClassName": "disabled",
  "focusClassName": "focus",
  "hoverClassName": "hover",
  "id": null,
  "increaseArea": "",
  "indeterminate": true,
  "indeterminateClassName": "indeterminate",
  "inheritClassName": false,
  "inheritID": false,
  "insert": null,
  "label": null,
  "labelClassName": null,
  "labelHover": true,
  "labelHoverClass": "hover",
  "labelTag": "span",
  "labelTagClassName": null,
  "name": null,
  "onBlur": null,
  "onChange": null,
  "onFocus": null,
  "onMouseDown": null,
  "onMouseLeave": null,
  "onMouseUp": null,
  "onTouchEnd": null,
  "onTouchStart": null,
  "type": null,
  "value": "",
}
`;

exports[`Checkbox component as mount should match the default state snapshot 1`] = `
{
  "checked": false,
  "hovered": false,
  "isMobile": false,
  "prevPropChecked": false,
}
`;

exports[`Checkbox component as render should match the snapshot 1`] = `
<div
  class="icheckbox indeterminate"
>
  <input
    style="opacity:0;position:absolute"
    type="checkbox"
    value=""
  />
  <ins
    class="iCheck-helper"
    role="presentation"
    style="position:absolute;top:0%;left:0%;display:block;width:100%;height:100%;margin:0;padding:0;background:#fff;border:0;opacity:0;cursor:pointer"
  />
</div>
`;
